welcome.lessons.welcome.variables.Variables.scala.error
Variables:4: error: ')' expected but ';' found.
      (nbPas = nbPas + 1;)
                        ^Variables:4: error: illegal start of statement
      (nbPas = nbPas + 1;)
                         ^Variables:10: error: ')' expected but ';' found.
	  (dejafait = dejafait + 1;)
                                  ^Variables:10: error: illegal start of statement
	  (dejafait = dejafait + 1;)
                                   ^